--- a/Publisher/package.json
+++ b/Publisher/package.json
@@ -2,7 +2,7 @@
   "name": "publisher",
   "version": "1.0.0",
   "description": "Web app works as publisher application to compose, sending consent message to Subscriber web app",
-  "main": "index.js",
+  "main": "app/main.jsx",
   "dependencies": {
     "babel-preset-react": "^6.3.13",
     "react": "^0.14.6",
@@ -16,6 +16,10 @@
     "babel-preset-react": "^6.3.13",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "history": "^1.17.0",
+    "html-webpack-plugin": "^1.7.0",
+    "react-hot-loader": "^1.3.0",
+    "react-router": "^1.0.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.11"
@@ -23,7 +27,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build"
+    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
+    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
   },
   "keywords": [
     "publisher"
